Crea la estructura y aplica los estilos al boton de instrucciones

--- a/index.html
+++ b/index.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper & Scissors</title>
+    <!-- Icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@900&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <!-- Style -->
     <link rel="stylesheet" href="./Css/style.css">
 </head>
 <body>
-
+    <div class="container">
+        <section class="instructions">
+            <button class="instruction__button buttons" id="openModal">
+                <i class="fas fa-tasks"></i>
+            </button>
+        </section>
+        
+    </div>
 </body>
 </html>
