Crea la estructura del modal y se le aplican los estilos correspondientes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,27 @@
                 <i class="fas fa-tasks"></i>
             </button>
         </section>
-        
+        <section class="modal" id="modal">
+            <div class="flex" id="flex">
+                <div class="modal__content">
+                    <section class="modal__logo">
+                        <img src="https://i.postimg.cc/qv7NtqGk/Logo-1.png" alt="logo del modal">
+                        <span class="close" id="close">&times;</span>
+                    </section>
+                    <section class="modal__body">
+                        <p class="modal__text text">
+                            El objetivo es vencer al oponente seleccionando una opción ganadora, gana quien tenga tres(3) puntos primero. Movimientos reglamentarios del juego:
+                        </p>
+                        <ul class="modal__text list">
+                            <li>Piedra✊ aplasta la tijera✌️ <br>(Gana la piedra ✊)</li>
+                            <li>Tijera✌️ corta el papel✋ <br>(Gana la tijera ✌️)</li>
+                            <li>Papel✋ envuelve la piedra✊ <br>(Gana el papel ✋)</li>
+                            <li>Si los jugadores escogen la misma opción ✌️✌️(Es empate)</li>
+                        </ul>
+                    </section>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
