Añade el logo del juego

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                 </div>
             </div>
         </section>
+        <section class="logo">
+            <img src="https://i.postimg.cc/qv7NtqGk/Logo-1.png" alt="logo del juego">
+        </section>
     </div>
     <script src="./Js/instructions.js"></script>
 </body>
