Crea el footer del juego, Modifica el alto del container

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             <span class="button__text size">Play now!</span>
             <i class="fas fa-gamepad button__icon size"></i>
         </section>
+        <footer class="footer flex">
+            <p class="author">Hecho por <a href="https://github.com/MGuedez" target="_blank">MGuedez</a> ❤️<p></p>
+        </footer>
     </div>
     <script src="./Js/instructions.js"></script>
 </body>
