Crea los perfiles del usuario y la maquina en el tablero de puntuación

--- a/game.html
+++ b/game.html
@@ -12,6 +12,21 @@
     <link rel="stylesheet" href="./Css/game.css">
 </head>
 <body>
-    
+    <div class="container">
+        <section class="scoreboard">
+            <h2 class="scoreboard__title">Tablero</h2>
+            <div class="scoreboard__competitors flex">
+                <span class="competitor__user competitor__perfil flex">
+                    <img src="https://i.postimg.cc/Kjk1J9t8/hacker.png" alt="">
+                    <span>Usuario</span>
+                </span>
+                <img src="https://i.postimg.cc/hG1T1c9b/vs.png" alt="versus" class="vs">
+                <span class="competitor__machine competitor__perfil flex">
+                    <span>Maquina</span>
+                    <img src="https://i.postimg.cc/85yvyJ3t/robot.png" alt="">
+                </span>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
