--- a/game.html
+++ b/game.html
@@ -14,7 +14,6 @@
 <body>
     <div class="container">
         <section class="scoreboard">
-            <h2 class="scoreboard__title">Tablero</h2>
             <div class="scoreboard__competitors flex">
                 <span class="competitor__user competitor__perfil flex">
                     <img src="https://i.postimg.cc/Kjk1J9t8/hacker.png" alt="">
@@ -25,6 +24,11 @@
                     <span>Maquina</span>
                     <img src="https://i.postimg.cc/85yvyJ3t/robot.png" alt="">
                 </span>
+            </div>
+            <div class="score flex">
+                <div class="score__user points">0</div>
+                <span class="divisor">&colon;</span>
+                <div class="score__machine points">0</div>
             </div>
         </section>
     </div>
