--- a/game.html
+++ b/game.html
@@ -14,21 +14,21 @@
 <body>
     <div class="container">
         <section class="scoreboard">
-            <div class="scoreboard__competitors flex">
-                <span class="competitor__user competitor__perfil flex">
-                    <img src="https://i.postimg.cc/Kjk1J9t8/hacker.png" alt="">
-                    <span>Usuario</span>
-                </span>
-                <img src="https://i.postimg.cc/hG1T1c9b/vs.png" alt="versus" class="vs">
-                <span class="competitor__machine competitor__perfil flex">
-                    <span>Maquina</span>
-                    <img src="https://i.postimg.cc/85yvyJ3t/robot.png" alt="">
-                </span>
+            <div class="scoreboard__title">
+                <span>Scoreboard</span>
             </div>
-            <div class="score flex">
-                <div class="score__user points">0</div>
-                <span class="divisor">&colon;</span>
-                <div class="score__machine points">0</div>
+            <div class="scoreboard__competitors">
+                <div class="scoreboard__competitor--user">
+                    <span class="competitor__user competitor">Usuario</span>
+                    <div class="score__user points">0</div>
+                </div>
+                <div class="notification__screen">
+                    <span class="notidications"></span>
+                </div>
+                <div class="scoreboard__competitor--machine">
+                    <span class="competitor__machine competitor">Usuario</span>
+                    <div class="score__machine points">0</div>
+                </div>
             </div>
         </section>
     </div>
