--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@
             <div class="scoreboard__title">
                 <span>Scoreboard</span>
             </div>
-            <div class="scoreboard__competitors">
+            <div class="scoreboard__competitors flex">
                 <div class="scoreboard__competitor--user">
                     <span class="competitor__user competitor">Usuario</span>
                     <div class="score__user points">0</div>
