Crea el texto divisor

--- a/game.html
+++ b/game.html
@@ -19,17 +19,21 @@
             </div>
             <div class="scoreboard__competitors flex">
                 <div class="scoreboard__competitor--user">
-                    <span class="competitor__user competitor">Usuario</span>
+                    <span class="competitor__user competitor">Human</span>
                     <div class="score__user points">0</div>
                 </div>
                 <div class="notification__screen">
                     <span class="notidications"></span>
                 </div>
                 <div class="scoreboard__competitor--machine">
-                    <span class="competitor__machine competitor">Usuario</span>
+                    <span class="competitor__machine competitor">Machine</span>
                     <div class="score__machine points">0</div>
                 </div>
             </div>
+        </section>
+        <span class="divisor__text">- - - - - may the best competitor win - - - - -</span>
+        <section>
+
         </section>
     </div>
 </body>
