Crea la estructura del campo de juego y se le aplican los estilos

--- a/game.html
+++ b/game.html
@@ -32,8 +32,21 @@
             </div>
         </section>
         <span class="divisor__text">- - - - - may the best competitor win - - - - -</span>
-        <section>
-
+        <section class="battlefield">
+            <div class="battlefield__machine">
+                <span class="machine__name battlefield__name">Machine</span>
+                <div class="movement__container movement__machine flex">
+                    <i class="fas fa-sync-alt"></i>
+                    <span class="loading__text">La PC espera tu jugada</span>
+                </div>
+            </div>
+            <div class="battlefield__user">
+                <span class="user__name battlefield__name">Human</span>
+                <div class="movement__container movement__user flex">
+                    <i class="fas fa-sync-alt"></i>
+                    <span class="loading__text">Haz tu jugada</span>
+                </div>
+            </div>
         </section>
     </div>
 </body>
