Crea y aplica los estilos a los botones de opciones del usuario

--- a/game.html
+++ b/game.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </section>
-        <span class="divisor__text">- - - - - may the best competitor win - - - - -</span>
+        <span class="divisor__text flex">- - - - - may the best competitor win - - - - -</span>
         <section class="battlefield">
             <div class="battlefield__machine">
                 <span class="machine__name battlefield__name">Machine</span>
@@ -47,6 +47,20 @@
                     <span class="loading__text">Haz tu jugada</span>
                 </div>
             </div>
+        </section>
+        <section class="user__options flex">
+            <button class="options__button buttons" id="rock">
+                <img src="https://i.postimg.cc/3RytWMHj/piedra.png" alt="opción piedra">
+            </button>
+            <button class="options__button buttons" id="paper">
+                <img src="https://i.postimg.cc/nLrkw8M8/papel.png" alt="opción papel">
+            </button>
+            <button class="options__button buttons" id="scissors">
+                <img src="https://i.postimg.cc/rpH9BhtD/tijeras.png" alt="opción tijeras">
+            </button>
+            <button class="options__button surrender__button buttons" id="leave">
+                <img src="https://i.postimg.cc/FRzbjRDb/surrender1.png" alt="">
+            </button>
         </section>
     </div>
 </body>
