--- a/game.html
+++ b/game.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <section class="scoreboard">
-            <div class="scoreboard__title">
+            <div class="scoreboard__title flex">
                 <span>Scoreboard</span>
             </div>
             <div class="scoreboard__competitors flex">
@@ -37,14 +37,14 @@
                 <span class="machine__name battlefield__name">Machine</span>
                 <div class="movement__container movement__machine flex">
                     <i class="fas fa-sync-alt"></i>
-                    <span class="loading__text">La PC espera tu jugada</span>
+                    <span class="loading__text">waiting for your move</span>
                 </div>
             </div>
             <div class="battlefield__user">
                 <span class="user__name battlefield__name">Human</span>
                 <div class="movement__container movement__user flex">
                     <i class="fas fa-sync-alt"></i>
-                    <span class="loading__text">Haz tu jugada</span>
+                    <span class="loading__text">make your move</span>
                 </div>
             </div>
         </section>
