crea la estructura del modal que se muestra al finalizar cada partida

--- a/game.html
+++ b/game.html
@@ -62,6 +62,27 @@
                 <img src="https://i.postimg.cc/FRzbjRDb/surrender1.png" alt="">
             </button>
         </section>
+        <section class="modal" id="modal">
+            <div class="flex" id="flex">
+                <div class="modal__content">
+                    <div class="modal__header">
+                        <span class="winLose"></span>
+                        <span class="close" id="close">&times;</span>
+                    </div>
+                    <div class="modal__body">
+                        <span class="modal__text text"></span>
+                        <button class="play__again btn__modal buttons flex" onclick="location.href = 'game.html';">
+                            <span class="button__text">Play again!</span>
+                            <i class="fas fa-gamepad button__icon"></i>
+                        </button>
+                        <button class="exit__button btn__modal buttons flex" onclick="location.href = 'index.html';">
+                            <span class="button__text">Exit</span>
+                            <i class="fas fa-sign-out-alt button__icon"></i>
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
