--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
         <section class="logo">
             <img src="https://i.postimg.cc/qv7NtqGk/Logo-1.png" alt="logo del juego">
         </section>
-        <section class="play__button buttons flex" onclick="location.href = 'game.html';" >
+        <button class="play__button buttons flex" onclick="location.href = 'game.html';" >
             <span class="button__text size">Play now!</span>
             <i class="fas fa-gamepad button__icon size"></i>
-        </section>
+        </button>
         <footer class="footer flex">
             <p class="author">Hecho por <a href="https://github.com/MGuedez" target="_blank">MGuedez</a> ❤️<p></p>
         </footer>
