Crea la funcion principal del juego

--- a/game.html
+++ b/game.html
@@ -58,7 +58,7 @@
             <button class="options__button buttons" id="scissors">
                 <img src="https://i.postimg.cc/rpH9BhtD/tijeras.png" alt="opción tijeras">
             </button>
-            <button class="options__button surrender__button buttons" id="leave">
+            <button class="options__button surrender__button buttons" id="surrender">
                 <img src="https://i.postimg.cc/FRzbjRDb/surrender1.png" alt="">
             </button>
         </section>
