Crea el funcionamiento del boton rendirse

--- a/game.html
+++ b/game.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </section>
-        <span class="divisor__text flex">- - - - - may the best competitor win - - - - -</span>
+        <span class="divisor__text flex">- - may the best competitor win - -</span>
         <section class="battlefield">
             <div class="battlefield__machine">
                 <span class="machine__name battlefield__name">Machine</span>
