Crea la funcionalidad de mostrar las notificaciones en la pantalla del scorebard

--- a/game.html
+++ b/game.html
@@ -22,7 +22,7 @@
                     <span class="competitor__user competitor">Human</span>
                     <div class="score__user points" id="scoreUser">0</div>
                 </div>
-                <div class="notification__screen">
+                <div class="notification__screen flex">
                     <span class="notifications" id="notifications"></span>
                 </div>
                 <div class="scoreboard__competitor--machine">
