Modifica algunos elementos, Aplica animacion al logo del modal de instrucciones

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             </button>
         </section>
         <section class="modal" id="modal">
-            <div class="flex" id="flex">
+            <div class="flex container__content--modal" id="flex">
                 <div class="modal__content">
+                    <span class="close" id="close">&times;</span>
                     <section class="modal__logo">
                         <img src="https://i.postimg.cc/qv7NtqGk/Logo-1.png" alt="logo del modal">
-                        <span class="close" id="close">&times;</span>
                     </section>
                     <section class="modal__body">
                         <p class="modal__text text">
