Crea los archivos para el responsive del juego, Aplica las media queries a la vista de inicio en la version tablet

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Exo:wght@900&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
     <!-- Style -->
     <link rel="stylesheet" href="./Css/style.css">
+    <link rel="stylesheet" href="./css/media_tablet.css" media="(min-width: 768px)">
+    <link rel="stylesheet" href="./css/media_desktop.css" media="(min-width: 1024px)">
 </head>
 <body>
     <div class="container">
